# Packaging

./: CMakeLists.txt  LICENSE.txt  MakePackage.py  Packaging.vcxproj  Packaging.vcxproj.filters  README.md  SConscript  ZipFile.cpp  ZipFile.h  ZipFile.hpp
Packaging.xcodeproj/: project.pbxproj
include/Packaging/: ZipFile.hpp
src/: ZipFile.cpp
